[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/Characters/DinoSheets/DinoSprites - vita.png" type="Texture" id=1]
[ext_resource path="res://scripts/NPC.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogue_tree/scripts/dialogue.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle_fast"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_slow"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 1.99998
height = 4.00004

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.67852
height = 5.12374

[node name="NPC" type="KinematicBody2D" groups=[
"Clickable",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )
hframes = 24

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle_slow"
anims/Idle_fast = SubResource( 1 )
anims/Idle_slow = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )

[node name="NPCArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCArea"]
position = Vector2( 0, -6 )
shape = SubResource( 5 )

[node name="Dialogue" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="body_entered" from="NPCArea" to="." method="_on_NPCArea_body_entered"]
[connection signal="body_exited" from="NPCArea" to="." method="_on_NPCArea_body_exited"]
[connection signal="input_event" from="NPCArea" to="." method="_on_NPCArea_input_event"]
[connection signal="mouse_entered" from="NPCArea" to="." method="_on_NPCArea_mouse_entered"]
[connection signal="mouse_exited" from="NPCArea" to="." method="_on_NPCArea_mouse_exited"]
[connection signal="Dialogue_Ended" from="Dialogue" to="." method="_on_Dialogue_Ended"]
[connection signal="Dialogue_Event" from="Dialogue" to="." method="_on_Dialogue_Event"]
